# DataSonda

./: .gitignore  INSTALL  MAKEFILE  README.md  SETUP  pyproject.toml  requirements.txt  setup.py
dev/: lightv
lib/includes/: colors  logic  man  style  theme  top
lib/version/: check
modules/: init  main
modules/core/: init  main  menu  netinfo  sysinfo
modules/functions/.tests/: vk
modules/functions/core/: logic  sys_check  sys_main  sys_net.py
modules/functions/info/: info_cpu  info_disks  info_gpu  info_kernel  info_networks  info_sys
modules/helper/: args  top
modules/info/: battery  devices  memory  packages  sys
static/art/: EOFmaker  EOFmaker.sh  illusion  illusion.sh  isometric1  isometric1.sh  isometric2  isometric2.sh  isometric3  isometric3.sh  isometric4  isometric4.sh  netsonda_1  netsonda_1.sh  small_1  small_1.sh  sonda_1  sonda_1.sh  sonda_sysnet_1  syssonda_1  syssonda_1.sh  test
static/shortcuts/: sysdd.desktop
sysdd/: __init__.py
sysdd/modules/: module1.py
