[tool.poetry]
name = "sysdd"
version = "1.0.0"
description = "A powerful tool that enhances traditional system and network diagnostics like ipconfig, ifconfig, and system information utilities. sysdd provides detailed insights into network configurations, hardware, system performance, and real-time monitoring, making it essential for administrators and advanced users."
authors = ["Jonathan Di Rico <yonasuriv@pm.me>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
